# WeakAL+AutoWS Hybrid Pipeline for Customer Support Ticket Classification
# Research project: combining Active Learning + Weak Supervision
# to minimize manual labeling while maintaining accuracy

[project]
name = "weakal-pipeline"
version = "1.1.0"
description = "Hybrid AL+WS pipeline for text classification with minimal human labeling"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "datasets>=2.14",
    "numba>=0.58",
    "joblib>=1.3",
]

[project.optional-dependencies]
# Encoder-specific dependencies (install as: pip install -e ".[encoders]")
encoders = [
    "gensim>=4.3",
    "sentence-transformers>=2.2",
    "torch>=2.0",
    "transformers>=4.30",
]
# SPLADE-specific (subset of encoders)
splade = [
    "torch>=2.0",
    "transformers>=4.30",
]
# FastText only
fasttext = [
    "gensim>=4.3",
]
# Dense encoder only
dense = [
    "sentence-transformers>=2.2",
    "torch>=2.0",
]
# Dev tools
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[tool.pytest]
testpaths = []

[tool.ruff]
line-length = 100
